# selective_reduced_integration_SRI-dealii

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Doxyfile.doc  Makefile  NLKM.h  README.md  SRI.h  assembly_routine_SRI.cc  assembly_routine_example.cc  cmake_install.cmake  compute_global_force_example.cc  mainpage.h
doc/: mainpage-framework.h  transform_code2Mainpage.py
doc/html/: NLKM_8h.html  SRI_8h__dep__incl.md5  SRI_8h__incl.map  _formulas.tex  annotated.html  assembly__routine__SRI_8cc.html  assembly__routine__SRI_8cc_source.html  classSolid.html  globals_vars.html  index.html  mainpage-framework_8h_source.html  mainpage_8h.html  mainpage_8h__incl.map  namespaceenums.html  namespacemembers.html  namespacemembers_eval.html
doc/html/search/: all_9.js  enums_0.js  enumvalues_0.js  files_0.js  files_2.js  files_3.js  functions_0.js  functions_1.js  functions_5.js  functions_6.js  functions_7.js  namespaces_1.js  namespaces_2.js  pages_0.js  variables_0.js
doc/latex/: NLKM_8h__dep__incl.md5  NLKM_8h__incl.md5  SRI_8h__dep__incl.md5  SRI_8h__incl.md5  annotated.tex  assembly__routine__SRI_8cc.tex  assembly__routine__SRI_8cc__incl.md5  classSolid.tex  index.tex  mainpage-framework_8h.tex  mainpage_8h__incl.md5  namespaceSRI.tex  namespaceenums.tex  refman.tex
docs/: mainpage-framework.h  make_documentation.asc  transform_code2Mainpage.py
docs/html/: NLKM_8h__dep__incl.map  NLKM_8h__dep__incl.md5  NLKM_8h__incl.map  NLKM_8h__incl.md5  NLKM_8h_source.html  SRI_8h.html  SRI_8h__dep__incl.map  SRI_8h__incl.md5  SRI_8h_source.html  assembly__routine__SRI_8cc__incl.map  assembly__routine__SRI_8cc__incl.md5  classSolid-members.html  classes.html  dir_e68e8157741866f444e17edd764ebbae.html  files.html  functions.html  functions_vars.html  globals.html  globals_func.html  graph_legend.html  index.html  mainpage-framework_8h.html  mainpage_8h__incl.md5  mainpage_8h_source.html  namespaceNLKM.html  namespaceSRI.html  namespacemembers_enum.html  namespacemembers_func.html  namespacemembers_vars.html  namespaces.html  pages.html  todo.html
docs/html/search/: all_0.js  all_1.js  all_3.js  all_4.js  all_6.js  all_b.js  all_c.js  searchdata.js  variables_1.js  variables_2.js
docs/latex/: NLKM_8h.tex  SRI_8h.tex  dir_e68e8157741866f444e17edd764ebbae.tex  files.tex  index.tex  namespaceNLKM.tex  namespaces.tex  todo.tex
